# dn42-setup

./: .gitattributes  .gitignore  Makefile  README.md
alice-lg/: alice.conf  birdwatcher.conf
autopeer/api/: .env.example  Cargo.toml  Makefile  README.md  TODO.md
autopeer/api/data/: .gitignore
autopeer/api/src/: config.rs  ipalloc.rs  jwt.rs  main.rs  templates.rs  validation.rs
autopeer/api/src/api/: mod.rs  peering.rs  test_helpers.rs
autopeer/api/src/bird/: config.rs  deploy.rs  mod.rs  peer.conf.tera
autopeer/api/src/challenge/: gpg.rs  mod.rs
autopeer/api/src/middleware/: auth.rs
autopeer/api/src/registry/: mod.rs  parser.rs  sync.rs
autopeer/api/src/wireguard/: config.rs  deploy.rs  mod.rs  wg.conf.tera
autopeer/api/tests/fixtures/gpg/: README.md  fingerprint.txt  test-private.asc  test-public.asc  test-signature.asc
bird/: bird.conf
bird-lg/: bird-lg-frontend.service  bird-lg-proxy.service
dns/: unbound.conf
dnssec-keys/: K0%2F27.13.20.172.in-addr.arpa.+013+19121.key  K0%2F27.13.20.172.in-addr.arpa.+013+19121.private  K0%2F27.13.20.172.in-addr.arpa.+013+56625.key  K0-27.13.20.172.in-addr.arpa.+013+36740.key  K0-27.13.20.172.in-addr.arpa.+013+36740.private  K0-27.13.20.172.in-addr.arpa.+013+56625.private  K0.0.0.4.6.6.3.0.0.3.d.f.ip6.arpa.+013+28954.key  K0.0.0.4.6.6.3.0.0.3.d.f.ip6.arpa.+013+28954.private  K0.0.0.4.6.6.3.0.0.3.d.f.ip6.arpa.+013+52802.key  K0.0.0.4.6.6.3.0.0.3.d.f.ip6.arpa.+013+52802.private  K0.0.0.4.6.6.3.0.3.d.f.ip6.arpa.+013+23148.key  K0.0.0.4.6.6.3.0.3.d.f.ip6.arpa.+013+23148.private  Klinnenberg.dn42.+013+45642.key  (+18 more)
(+86 files in other folders)
