[package]
name = "autopeer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
hex = "0.4"
pgp = "0.17.0"
dotenvy = "0.15"
git2 = "0.20"
tera = "1.20"
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
chrono = "0.4"

[dev-dependencies]
